[package]
name = "rust-mev-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.19.0", default-features = false, features = ["http", "ws-tls-tokio"] }
eyre = "0.6.9"
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.10.1"
hex-literal = "0.4.1"
colored = "2.0.4"
serde_json = "1.0.108"
ethabi = "18.0.0"
tiny-keccak = "2.0.2"
